--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-iframe": "^1.8.5",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
+    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
